# colok-roll

./: .gitignore  CHANGES_SUMMARY.md  FIRST_TIME_SETUP.md  FOCUS_QUALITY_INTEGRATION.md  LICENSE  OSC_FIRST_TIME_SETUP.md  PHASES.md  README.md  convert_oir_batch.py  convert_oir_only.py  copy_whole.ipynb  environment.yml  lab_meeting.ipynb  pyproject.toml  requirements.txt  run_cli.sh  run_oir_conversion.sh  setup.py  single_image_analysis.ipynb  step_by_step.ipynb  test_blurring.ipynb  test_installation.py  test_oir_conversion.py  test_puncta_pipeline.sh  testing.ipynb  whole_analysis.ipynb
.github/workflows/: conda-publish.yml
.ipynb_checkpoints/: lab_meeting-checkpoint.ipynb  whole_analysis-checkpoint.ipynb
colokroll/: __init__.py
colokroll.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
colokroll/analysis/: __init__.py  cell_segmentation.py  colocalization.py  config.yaml  nuclei_detection.py  puncta.py  segmentation_config.py
colokroll/analysis/colocalization/: __init__.py  core.py
colokroll/analysis/segmentation/: README.md  __init__.py  cellpose.py  config.py  simple_cellpose.py
colokroll/config/: __init__.py  base.py  presets.py  templates.py
colokroll/core/: __init__.py  config.py  format_converter.py  utils.py
colokroll/data_processing/: __init__.py  image_loader.py  mip_creator.py  projection.py
colokroll/imaging_preprocessing/: __init__.py  focus_detection.py  focus_measure_quality.py  tasks.md  z_slice_detection.py
colokroll/imaging_preprocessing/background_subtraction/: __init__.py  backends.py  background_subtractor.py  cpu_backend.py  cuda_backend.py  cuda_config.py  mps_backend.py
colokroll/imaging_preprocessing/z_slice_detection/: __init__.py  comparison.py  core.py  focus_metrics.py  slice_selection.py  utils.py  visualization.py
colokroll/io/: __init__.py  converters.py  loaders.py  mip.py
colokroll/preprocessing/: __init__.py
colokroll/preprocessing/background/: __init__.py  auto_bg_config.py  background_subtractor.py
colokroll/visualization/: __init__.py  plots.py  ui.py  visualization.py
conda-recipe/: bld.bat  build.sh  build_local.sh  meta.yaml
docs/: background_subtraction.md  cell_segmentation.md  colocalization.md  puncta_analysis.md  workflow_modes.md  z_slice_detection.md
examples/: focus_quality_metrics_demo.py  quick_segmentation.md  simple_segmentation_example.py
perinuclear_analysis/: __init__.py
perinuclear_analysis/analysis/: cell_segmentation.py  colocalization.py  segmentation_test.ipynb
perinuclear_analysis/core/: config.py  format_converter.py
perinuclear_analysis/data_processing/: image_loader.py
perinuclear_analysis/imaging_preprocessing/background_subtraction/: __init__.py  auto_bg_config.py  background_subtractor.py  utils.py  whole_analysis.ipynb
perinuclear_analysis/visualization/: __init__.py  visualization.py
scripts/: batch_whole_analysis.py  test_puncta_pipeline.py
tests/: 1_image_analysis copy.ipynb  1_image_analysis.ipynb  test_focus_detection.py
