[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "colokroll"
version = "0.1.0"
description = "Colocalization analysis toolkit for microscopy images"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.14"
authors = [
    { name = "SaezAtienzar Lab" }
]
keywords = ["microscopy", "colocalization", "image-analysis", "fluorescence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    # === Core scientific stack ===
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.4",

    # === Image processing ===
    "scikit-image>=0.19",
    "scikit-learn>=1.0",
    "opencv-python>=4.5",
    "opencv-rolling-ball>=1.0.1",
    "pillow>=9.0",

    # === Image I/O formats ===
    "tifffile>=2023.7",
    "imageio>=2.11.0",
    "nd2reader>=3.3",
    "nd2>=0.10.4",
    "h5py>=3.15.1",

    # === BioIO for proprietary formats (OIR, etc.) ===
    "bioio>=1.0.0",
    "bioio-ome-tiff>=1.0.0",
    "bioio-bioformats>=1.0.0",  # Requires Java JRE

    # === Visualization ===
    "matplotlib>=3.5",
    "seaborn>=0.11",

    # === Data export ===
    "openpyxl>=3.0",
    "xlsxwriter>=3.0.0",
    "pyyaml>=6.0",

    # === Deep learning (core) ===
    "torch>=2.9.1",
    "kornia>=0.8.2",

    # === External APIs ===
    "gradio_client>=1.3.0",  # Cellpose API

    # === Notebook interface ===
    "marimo>=0.18.4",
]

[project.optional-dependencies]
# BigFISH for advanced puncta/spot detection with automatic thresholding
puncta = [
    "big-fish>=0.6.2",
]

# Additional deep learning models
ml = [
    "torchvision",
    "stardist>=0.8.0",
]

# GPU acceleration with CuPy
gpu = [
    "cupy>=13.0",
]

# Development and testing
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "jupyterlab>=3.0",
    "ipykernel>=6.0",
]

# Full installation with all optional features
full = [
    "colokroll[puncta,ml,gpu]",
]

[project.urls]
Homepage = "https://github.com/SaezAtienzar/colok-roll"
Repository = "https://github.com/SaezAtienzar/colok-roll"

[tool.hatch.build.targets.wheel]
packages = ["colokroll"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
